--- a/styles/index.css
+++ b/styles/index.css
@@ -30,7 +30,8 @@ border-radius: 100px;
 }
 
 .bouton a:hover {
-background-color: #f74c3c;
+background-color: #0ddef1;
+color: black;
 }
 /* Fin des boutons "all" */
 
@@ -106,7 +107,7 @@ img
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
-  } 
+  }
 
   .next
   {
