--- a/styles/header.css
+++ b/styles/header.css
@@ -63,6 +63,10 @@ body {
 }
 
 @media (max-width:600px) {
+  .nav {
+    width: 100%;
+  }
+
   .nav > .nav-btn {
     display: inline-block;
     position: absolute;
