--- a/styles/index.css
+++ b/styles/index.css
@@ -156,7 +156,6 @@ h3
 {
   text-align: center;
   font-size: 30px;
-  text-decoration: underline red;
 
 }
 
@@ -173,7 +172,6 @@ h3
   float: left;
   margin: auto;
   padding: 5px;
-  border: 1px solid white;
   width: 49%;
   height: 49%;
   display: block;
@@ -199,7 +197,6 @@ h3
 {
   text-align: center;
   font-size: 40px;
-  text-decoration: underline red;
 
 }
 
@@ -207,7 +204,6 @@ h3
 {
   text-align: center;
   font-size: 30px;
-  text-decoration: underline red;
 }
 
 #parcours hr /* ligne de séparation sous le titre parcours */
@@ -231,173 +227,65 @@ h3
 }
 /* fin de la partie parcours */
 /* ================ The Timeline ================ */
-
-.timeline {
-  position: relative;
-  width: 100%;
-  height: 40em;
-  margin: 0 auto;
-  padding: 3em 0;
-  list-style-type: none;
+.timeline{
+  margin-left:850px;
+  overflow:visible;
 }
 
-.timeline:before {
-  position: absolute;
-  left: 50%;
-  top: 0;
-  content: ' ';
-  display: block;
-  width: 0.5em;
-  height: 100%;
-  margin-top : 5em;
-  background: rgb(80,80,80);
-  background: -moz-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(30,87,153,1)), color-stop(100%,rgba(125,185,232,1)));
-  background: -webkit-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
-  background: -o-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
-  background: -ms-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
-  background: linear-gradient(to bottom, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
 
-  z-index: 5;
-}
-
-.timeline li {
-  margin-top: 6em;
-}
-
-.timeline li:after {
-  content: "";
-  display: block;
-  height: 0;
-  clear: both;
-  visibility: hidden;
-}
-
-.direction-l {
-  position: relative;
-  width: 30em;
-  right: 0.6em;
-  text-align: right;
-}
-
-.direction-r {
-  position: relative;
-  left: 32.4em;
-  width: 50em;
-
-}
-
-.flag-wrapper {
-  position: relative;
-  display: inline-block;
-  text-align: center;
-}
-
-.flag {
-  position: relative;
-  display: inline;
-  background: rgb(248,248,248);
-  padding: 6px 10px;
+.entry{
+  margin-left:20px;
+  position:relative;
+   padding-left: 30px;
+  border: 2px solid black;
   border-radius: 5px;
+  min-width:100px;
+  max-width:150px;
+  height:100px;
+  overflow:visible;
 
-  font-weight: 600;
-  text-align: left;
 }
 
-.direction-l .flag {
-  -webkit-box-shadow: -1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-  -moz-box-shadow: -1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-  box-shadow: -1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
+.core{
+  width:inherit;
+  height:inherit;
 }
 
-.direction-r .flag {
-  -webkit-box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-  -moz-box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-  box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
+.entry:after{
+  content:'';
+  position:absolute;
+  display:block;
+  width:35px;
+  height:5px;
+  background:black;
+  top:55%;
+  left:-19%;
 }
 
-.direction-l .flag:before,
-.direction-r .flag:before {
-  position: absolute;
-  top: 50%;
-  right: -40px;
-  content: ' ';
-  display: block;
-  width: 12px;
-  height: 12px;
-  margin-top: -10px;
-  background: #fff;
-  border-radius: 10px;
-  border: 4px solid rgb(255,80,80);
-  z-index: 10;
+.entry:before{
+
+  content:"";
+  position:absolute;
+  width:3px;height:150%;
+  display:block;
+  border-radius:0px;
+  border:2px solid skyblue;
+  background: skyblue;
+  left:-19%;
 }
 
-.direction-r .flag:before {
-  left: -40px;
+.core:before{
+  content:'';
+  display:block;
+  position:absolute;
+  width:7px;height:7px;
+  border:3px solid black;
+  background: black;
+  top:52%;
+  left:-20%;
 }
 
-.direction-l .flag:after {
-  content: "";
-  position: absolute;
-  left: 100%;
-  top: 50%;
-  height: 0;
-  width: 0;
-  margin-top: -8px;
-  border: solid transparent;
-  border-left-color: rgb(248,248,248);
-  border-width: 8px;
-  pointer-events: none;
-}
 
-.direction-r .flag:after {
-  content: "";
-  position: absolute;
-  right: 100%;
-  top: 50%;
-  height: 0;
-  width: 0;
-  margin-top: -8px;
-  border: solid transparent;
-  border-right-color: rgb(248,248,248);
-  border-width: 8px;
-  pointer-events: none;
-}
-
-.time-wrapper {
-  display: inline;
-
-  line-height: 1em;
-  font-size: 0.66666em;
-  color: rgb(250,80,80);
-  vertical-align: middle;
-}
-
-.direction-l .time-wrapper {
-  float: left;
-}
-
-.direction-r .time-wrapper {
-  float: right;
-}
-
-.time {
-  display: inline-block;
-  padding: 4px 6px;
-  background: rgb(248,248,248);
-}
-
-.desc {
-  margin: 1em 0.75em 0 0;
-  font-size: 0.77777em;
-  font-style: italic;
-  line-height: 1.5em;
-}
-
-.direction-r .desc {
-  margin: 1em 0 0 0.75em;
-  width: 25em;
-}
 
 /* FIN DU CSS DE JEREM */
 
@@ -437,6 +325,10 @@ h3
       text-align: center;
            }
     /* Fin de la parallax */
+    .timeline{
+      margin-left:150px;
+      overflow:visible;
+    }
  }
 /* Fin de la section de Responsivité */
 
@@ -465,4 +357,5 @@ h3
   background: transparent;
   text-align: center;
   display: block;
+  padding-left: 250px;
  }
