--- a/styles/projet.css
+++ b/styles/projet.css
@@ -23,7 +23,7 @@ body {
 }
 
 nav{
-    width: 100%;
+    width: 100% !important;
     height: 5em !important;
     border: none;
     background-color: #000 !important;
